# yafl

./: .gitignore  README.md
yafl/: CMakeLists.txt  fast_log.tar
yafl/Logger/demo/: CMakeLists.txt  main.cpp  msg.h  power.h  series.cpp
yafl/Logger/m4log/: BulkLog.h  CMakeLists.txt  LogHandler.h  log.cpp  m4log_defs.cpp
yafl/Logger/reader/: elbit_reader.cmake  reader.py.in
yafl/custom.build/: CMakeLists.txt  configure_generator.cmake  empty.cpp  log_precompile.cmake  log_precompile.cmake.sav  yafl_precompile.cmake  yafl_precompile_cpp.cmake  yafl_precompile_h.cmake
yafl/infra/: CMakeLists.txt
yafl/infra/inc/: joinable.h
yafl/infra/inc/container/: cyclic_queue.h  queue.h
yafl/infra/inc/counter/: CMakeLists.txt  counter_rate.h
yafl/infra/inc/execution/: CMakeLists.txt  execution_at.h  execution_base.h  execution_count.h  execution_countdown.h  execution_forever.h  execution_notification.h  execution_once.h  execution_period.h  execution_repository.h  execution_suspend.h  owner_execution.h
yafl/infra/inc/logging/: HandlerMsg.h  msg.h
yafl/infra/inc/memory/: mempool.h
yafl/infra/inc/operation/: CMakeLists.txt  operation.h  operation_example.h  operation_execution_destroyer.h
yafl/infra/inc/thread_queue/: CMakeLists.txt  thread_queue.h  thread_queue_counter.h  thread_queue_handler.h  thread_queue_owner.h  thread_queue_t1.h
yafl/infra/src/: CMakeLists.txt
yafl/infra/src/counter/: CMakeLists.txt  counter_rate.cpp
yafl/infra/src/execution/: CMakeLists.txt  SConscript  execution_at.cpp  execution_base.cpp  execution_count.cpp  execution_countdown.cpp  execution_forever.cpp  execution_notification.cpp  execution_once.cpp  execution_period.cpp  execution_suspend.cpp
yafl/infra/src/logging/: CMakeLists.txt  HandlerMsg.cpp
yafl/infra/src/operation/: operation_example.cpp  operation_execution_destroyer.cpp
yafl/infra/src/thread_queue/: CMakeLists.txt  thread_queue_counter.cpp
yafl/logger/: CMakeLists.txt
yafl/logger/demo/: CMakeLists.txt  main.cpp  msg1.cpp  series.cpp  series.h
yafl/logger/inc/: CMakeLists.txt  log.h  m4log_defs.h  msg_t.h
yafl/logger/m4log/: BulkLog.cpp  BulkLog.h  CMakeLists.txt  LogHandler.cpp  LogHandler.h  log.cpp  log.h  m4log_defs.cpp
yafl/logger/reader/: CMakeLists.txt  elbit_reader.cmake  reader.py.in  yafl_reader.cmake
yafl/m4/: code_area.sed  elbitpp.m4  generate_code_and_map.sh.in  map_area.sed  modules.m4
